<resources>
    <string name="app_name">Ex01</string>

    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="gander">Gander</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="birth_date">Birthday</string>
    <string name="submit">Submit</string>
    <string name="select_avatar_image">Select Avatar Image</string>

    <string name="full_name_validation_message">Please enter letter-base first and last name.</string>
    <string name="email_address_message">Please enter your email address in the format someone@example.com.</string>
    <string name="phone_number_validation_message">Please enter 10 digits phone number.</string>
    <string name="password_validation_message">Incorrect password.</string>
    <string name="gander_validation_message">Please choose a gender.</string>
    <string name="birth_date_validation_message">Please enter your birthday in the format 01/01/2000.</string>
    <string name="app_title">Assignment #1</string>
    <string name="name1">Moshe Haina</string>
    <string name="user_details">User Details:</string>
    <string name="dial">Dial</string>
    <string name="send_mail">Send Mail</string>
</resources>
