<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayUserInfoActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/UserDetailsTextView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:autoSizeTextType="uniform"
        android:text="@string/user_details"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_weight="9"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/photo_camera"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:textAlignment="center"
        android:layout_weight="9"/>

    <Button
        android:id="@+id/dialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        droid:text="@string/dial"
        android:layout_weight="3"
  />

    <Button
        android:id="@+id/sendMailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_mail"
        android:layout_weight="3"/>

</LinearLayout>